overflow-x fixes

--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -1,8 +1,7 @@
+html,
 body {
-    /* this is for mobile devices specially */
     overflow-x: hidden;
 }
-
 /* ------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* Header Starts Here */
